fixed css on mobiles for meal prep

--- a/front_end/assets/style.css
+++ b/front_end/assets/style.css
@@ -56,3 +56,13 @@ RouterLink {
     padding: 20px;
     gap: 30px;
 }
+
+
+@media only screen and (max-width: 567px) {
+    .steps > * {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+}
